<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/loginEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/confirmPasswordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirmation"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"/>
</LinearLayout>